syntax = "proto3";
package com.tigerbrokers.stock.openapi.client.socket.data.pb;

option java_package = "com.tigerbrokers.stock.openapi.client.socket.data.pb";
option java_multiple_files = true;

message QuoteData {
  enum QuoteType {
    UNKNOWN = 0;
    QUOTE = 1;
    BBO = 2; // best bid and offer
  }
  string symbol = 1;
  QuoteType type = 2; // QUOTE/BBO
  uint64 timestamp = 3;
  uint64 serverTimestamp = 4;
  optional double avgPrice = 5;
  optional double latestPrice = 6; // required when type is 'QUOTE'
  optional string latestTime = 7; // required when type is 'QUOTE'
  optional double preClose = 8; // required when type is 'QUOTE'
  optional sint64 volume = 9; // required when type is 'QUOTE'
  optional double amount = 10; // required when type is 'QUOTE'

  optional string hourTradingTag = 11; // Pre/Post-Mkt

  optional double open = 12; // required when symbol in HK market
  // optional double close = 13;
  optional double high = 14; // required when symbol in HK market
  optional double low = 15; // required when symbol in HK market

  optional string marketStatus = 16;

  optional double askPrice = 17; // required when type is 'BBO'
  optional sint64 askSize = 18; // required when type is 'BBO'
  optional double bidPrice = 19; // required when type is 'BBO'
  optional sint64 bidSize = 20; // required when type is 'BBO'

  // minute data: price, average price, time, volume
  optional double p = 21; // last price of the minute bar
  optional double a = 22; // average price of the minute bar
  optional uint64 t = 23; // timestamp of the minute bar
  optional sint64 v = 24; // trading volume of the minute bar

}
